[package]
name = "easy-dungeon-scrawl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"
serde = { version = "1.0.193", features = ["derive"] }
toml = "0.8.8"
crossterm = { version = "0.19", features = [ "serde" ] }
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.7.3", default-features = false, features = ["std"] }
tui = { version = "0.14", default-features = false, features = ['crossterm', 'serde'] }
thiserror = "1.0"
log = "0.4.20"
log4rs = "1.2.0"
serde_yaml = "0.9.30"

